--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,23 @@
         <p><a href="/download" class="btn btn-primary">Click here to download the table</a></p>
         
         <h2>Table 1</h2>
-        <div>{{ table1|safe }}</div>
-        
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Index #</th>
+                    <th>Value</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for index, row in table1.iterrows() %}
+                <tr>
+                    <td>{{ index }}</td>
+                    <td>{{ row['Value'] }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+
         <h2>Table 2</h2>
         <div>{{ table2|safe }}</div>
     </div>
